Fix dashboard menu on smaller screens

--- a/css/ZeroHello.css
+++ b/css/ZeroHello.css
@@ -35,10 +35,12 @@ a:hover { text-decoration: none }
 .PageFiles-container, .PageStats-container { width: 0px; float: left; }
 #PageFiles, #PageStats { transition: all 0.3s; opacity: 1; width: 100%; width: 100vw; transform: none; max-height: 100%; padding-right: 10px; box-sizing: border-box; padding-bottom: 50px; }
 #PageFiles .files { transition: all 0.3s; opacity: 1; transform: none }
-.left { transition: 0.6s all cubic-bezier(0.785, 0.135, 0.15, 0.86); overflow: hidden; }
+.left { transition: 0.6s all cubic-bezier(0.785, 0.135, 0.15, 0.86), z-index 0s; overflow: hidden; }
 body.changing { overflow-y: scroll; }
 
 /* PageSites */
+body.changing .left { z-index: 1 !important; }
+#BodySites .left { z-index: 0; }
 #BodySites #PageStats, #BodyFiles #PageStats, body.changing #PageStats { opacity: 0; transform: translateY(30px); pointer-events: none; overflow: hidden; }
 #BodySites #PageFiles, #BodyStats #PageFiles, body.changing #PageFiles { opacity: 0; transform: translateY(30px); pointer-events: none; overflow: hidden; }
 #BodySites #PageFiles, #BodyStats #PageFiles { max-height: 0px }
